--- a/root/index.html
+++ b/root/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset= "utf-8">
-        <title>Blog andreu</title>
+        <title>Blog andreu ❤  </title>
     </head>
     <body>
-            
+                 
     </body>
 </html>
