--- a/root/tema2.html
+++ b/root/tema2.html
@@ -5,6 +5,30 @@
         <title>Blog andreu</title>
     </head>
     <body>
-            
+            <!--Inicia el blog-->
+            <section>
+                
+            <header>
+                <h1>basketball</h1>
+                <h3>20/11/21</h3>
+            </header>
+
+            <main>
+                <h4>Es un deporte que las ligas lo hacen importante, una liga es en donde participan muchos equipos de todo el mundo</h4>
+                <p>El basquet es el deporte mas conocido a nivel internacional, lo que más le da vida al futbol son los torneos y las ligas, estos se juegan en equipos, y van jugando partido y partido hasta llegar a la final y asi es como se puede ganar,
+                    los equipos estan formados por: 5 jugadores: 2 defensas, 1 medios, 2 delanteros.
+                </p>
+            </main>
+
+            <aside>
+
+            </aside>
+            </section>
+            <!--termina el blog-->
+
+            <!--footer-->
+            <footer>
+
+            </footer>
     </body>
 </html>
