--- a/root/tema3.html
+++ b/root/tema3.html
@@ -5,6 +5,29 @@
         <title>Blog andreu</title>
     </head>
     <body>
-            
+            <!--Inicia el blog-->
+            <section>
+                
+            <header>
+                <h1>Ciclismo</h1>
+                <h3>20/11/21</h3>
+            </header>
+
+            <main>
+                <h4>Es un deporte que es sobre una bicicleta, se hacen carreras de manera soliitaria donde compiten 20 personas</h4>
+            <p> Es un deporte donde cada competencia cambia el tipo de bicicleta, las competencias son entre 20 personas que tiene que crusas 30 km y las largas son de 60 km, el primer lugar normalmente es de: 200000, pero puede ser más dependiendo de la competencia y los patrocinadores, las bicis cuestan arriiba de 50000 pesos, las llantas duran 1 año y cuestan 1000 pesos.
+                </p>
+            </main>
+
+            <aside>
+
+            </aside>
+            </section>
+            <!--termina el blog-->
+
+            <!--footer-->
+            <footer>
+
+            </footer>
     </body>
 </html>
