--- a/root/tema4.html
+++ b/root/tema4.html
@@ -5,6 +5,29 @@
         <title>Blog andreu</title>
     </head>
     <body>
-            
+            <!--Inicia el blog-->
+            <section>
+                
+            <header>
+                <h1>Boxeo</h1>
+                <h3>20/11/21</h3>
+            </header>
+
+            <main>
+                <h4>Es un deporte en donde dos personas see meten a golpes dentro de un ring, al final gana más golpes haya asestado o que uno se rinda o no pueda más por ejemplo una knockeada</h4>
+                <p>En el box el luchador promedio gana: 50000 dolares, en el box no se pueden usar las piernas, existen muchos luuchadores los mas conocidos son: Micky tyson Pacquiao, El canelo, los boxeador corren muchos riesgos y algunos luchadores sus puños son una arma blanca, además que es muy peligroso ya que algunos sufren dolores en el estomago, no olvides que el box es un gran deporte y muchas personas lo practican alrededor del mundo, asi se gana.
+                </p>
+            </main>
+
+            <aside>
+
+            </aside>
+            </section>
+            <!--termina el blog-->
+
+            <!--footer-->
+            <footer>
+
+            </footer>
     </body>
 </html>
